[package]
name = "web3-proxy"
version = "1.0.0"
authors = ["michael1011 <me@michael1011.at>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.11"
hyper = "0.13.8"
structopt = "0.3.17"
serde_json = "1.0.57"
async-trait = "0.1.40"
jsonrpc-core = "15.0.0"
simple_logger = "1.9.0"
tokio = { version = "0.2.22", features = ["full"] }
web3 = { version = "0.13.0", default-features = false, features = ["http"] }

[profile.release]
lto = "fat"
codegen-units = 1
